generic/deployment-port80-test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-bind-capability
  labels:
    app: test-bind-capability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-bind-capability
  template:
    metadata:
      labels:
        app: test-bind-capability
      annotations:
        openshift.io/required-scc: restricted
    spec:
      containers:
      - name: test-container
        image: python:3.9-slim  # Python image with slim footprint
        command:
          - python3
          - -c
          - |
            [...]
        securityContext:
          runAsUser: 1001
          allowPrivilegeEscalation: true
          capabilities:
            add:
              - NET_BIND_SERVICE
